syntax = "proto3";

package protocol;

message DeploymentRequest {
    string applicationId = 1;
    string deploymentId = 2;
}
