syntax = "proto3";

package protocol;

enum ApplicationStatus {
    A_UNKNOWN = 0;
    A_DEPLOYING = 1;
    A_RUNNING = 2;
    A_CRASHED = 3;
    A_FAILED = 4;
}

message ApplicationCreated {
    string id = 1;
    string deploymentId = 2;
}

message ApplicationUpdated {
    string id = 1;
    string deploymentId = 2;
}

message ApplicationDeleted {
    string id = 1;
    string runnerId = 2;
    string name = 3;
    string defaultDomain = 4;
}

message ApplicationStatusChanged {
    string id = 1;
    ApplicationStatus status = 2;
}

message ApplicationDeploymentRequested {
    string id = 1;
    string deploymentId = 2;
}
